WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
32788
[GTK] Failing test platform/gtk/editing/pasteboard/middle-button-paste.html
https://bugs.webkit.org/show_bug.cgi?id=32788
Summary
[GTK] Failing test platform/gtk/editing/pasteboard/middle-button-paste.html
Alejandro G. Castro
Reported
2009-12-20 03:57:04 PST
The test is failing in the bots.
Attachments
Proposed patch
(1.81 KB, patch)
2009-12-20 04:00 PST
,
Alejandro G. Castro
no flags
Details
Formatted Diff
Diff
Proposed patch
(4.65 KB, patch)
2009-12-20 07:06 PST
,
Alejandro G. Castro
no flags
Details
Formatted Diff
Diff
Proposed patch
(4.65 KB, patch)
2009-12-20 07:24 PST
,
Alejandro G. Castro
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Alejandro G. Castro
Comment 1
2009-12-20 04:00:13 PST
Created
attachment 45269
[details]
Proposed patch Added fixed font size.
WebKit Review Bot
Comment 2
2009-12-20 04:05:08 PST
style-queue ran check-webkit-style on
attachment 45269
[details]
without any errors.
Gustavo Noronha (kov)
Comment 3
2009-12-20 04:09:09 PST
Comment on
attachment 45269
[details]
Proposed patch Looks good (and works for me).
WebKit Commit Bot
Comment 4
2009-12-20 04:18:41 PST
Comment on
attachment 45269
[details]
Proposed patch Clearing flags on attachment: 45269 Committed
r52413
: <
http://trac.webkit.org/changeset/52413
>
WebKit Commit Bot
Comment 5
2009-12-20 04:18:47 PST
All reviewed patches have been landed. Closing bug.
Alejandro G. Castro
Comment 6
2009-12-20 06:56:05 PST
This fix does not fix the problem, we have to create a test that does not use fixed values for the events positions.
Alejandro G. Castro
Comment 7
2009-12-20 07:06:40 PST
Created
attachment 45275
[details]
Proposed patch Avoid using fixed mouse positions, it was causing problems in the bots, and add button to the click count function to avoid double paste with different buttons.
WebKit Review Bot
Comment 8
2009-12-20 07:10:10 PST
style-queue ran check-webkit-style on
attachment 45275
[details]
without any errors.
Alejandro G. Castro
Comment 9
2009-12-20 07:24:39 PST
Created
attachment 45278
[details]
Proposed patch Small nitpick.
WebKit Review Bot
Comment 10
2009-12-20 07:25:42 PST
style-queue ran check-webkit-style on
attachment 45278
[details]
without any errors.
Gustavo Noronha (kov)
Comment 11
2009-12-20 08:17:59 PST
Comment on
attachment 45278
[details]
Proposed patch This should work better, thanks =). Tested locally, let's see if the bots like it.
WebKit Commit Bot
Comment 12
2009-12-20 08:26:24 PST
Comment on
attachment 45278
[details]
Proposed patch Clearing flags on attachment: 45278 Committed
r52419
: <
http://trac.webkit.org/changeset/52419
>
WebKit Commit Bot
Comment 13
2009-12-20 08:26:30 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug