2009-12-20  Alejandro G. Castro  <alex@igalia.com>

Reviewed by Gustavo Noronha Silva.

        [GTK] Failing test platform/gtk/editing/pasteboard/middle-button-paste.html
        https://bugs.webkit.org/show_bug.cgi?id=32788

        Avoid using fixed values when moving mouse.

        * platform/gtk/editing/pasteboard/middle-button-paste-expected.txt:
        * platform/gtk/editing/pasteboard/middle-button-paste.html:
2009-12-20  Alejandro G. Castro  <alex@igalia.com>

        Reviewed by Gustavo Noronha Silva.

        [GTK] Failing test platform/gtk/editing/pasteboard/middle-button-paste.html
        https://bugs.webkit.org/show_bug.cgi?id=32788

        Do not increase the click count if we are using a different button.

        * DumpRenderTree/gtk/EventSender.cpp:

Canonical link: https://commits.webkit.org/43832@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52419 268f45cc-cd09-0410-ab3c-d52691b4dbfc